--- a/pages/notes/magpie/2023-02-09.index.en.mdx
+++ b/pages/notes/magpie/2023-02-09.index.en.mdx
@@ -29,7 +29,13 @@ https://shikijs.github.io/twoslash/
 
 ### CSS
 
+#### Styling methods
+
 https://github.com/silviogutierrez/reactivated/discussions/139
+
+#### Animation
+
+https://tobiasahlin.com/blog/how-to-animate-box-shadow/
 
 ### MQTT
 
