--- a/pages/notes/this-site/2023-02-06.index.en.mdx
+++ b/pages/notes/this-site/2023-02-06.index.en.mdx
@@ -27,6 +27,10 @@ pluggin (rehypeImgSize -> rehypeImg?) should update it to
 
 ### Longer and complex investigations
 
+#### &#9744; Add comments and reactions to blog posts
+
+https://giscus.app/
+
 #### &#9744; Replace Styled Components with Module SCSS and Tailwind
 
 <p />
