--- a/pages/notes/magpie/2023-02-09.index.en.mdx
+++ b/pages/notes/magpie/2023-02-09.index.en.mdx
@@ -12,7 +12,7 @@ sortingPriority: 10
 
 #### Handling apt-key is deprecated
 
-Manage keyring files in trusted.gpg.d instead in Debian/Ubuntu Linux.
+Manage keyring files in `trusted.gpg.d` instead in Debian/Ubuntu Linux.
 
 https://itsfoss.com/apt-key-deprecated/<br />
 https://github.com/yarnpkg/yarn/issues/7866#issuecomment-1403268001
@@ -48,4 +48,5 @@ https://docs.aws.amazon.com/iot/latest/developerguide/secure-tunneling-tutorial-
 
 ### Other Blogs Examples
 
-https://sleeplessbeastie.eu/2022/05/23/how-to-configure-static-ip-address-on-raspberry-pi/
+https://sleeplessbeastie.eu/2022/05/23/how-to-configure-static-ip-address-on-raspberry-pi/<br />
+https://www.johnvincent.io/website/markdown-spell-checking/
