--- a/pages/notes/magpie/2023-02-09.index.en.mdx
+++ b/pages/notes/magpie/2023-02-09.index.en.mdx
@@ -46,7 +46,7 @@ https://efundies.com/connect-to-your-mqtt-broker-from-the-internet-with-port-for
 https://www.socketxp.com/iot/remote-access-to-mqtt-broker-behind-nat-router-or-firewall-over-the-internet/<br />
 https://docs.aws.amazon.com/iot/latest/developerguide/secure-tunneling-tutorial-open-tunnel.html
 
-### Other Blogs Examples
+### Other Blog Examples
 
 https://sleeplessbeastie.eu/2022/05/23/how-to-configure-static-ip-address-on-raspberry-pi/<br />
 https://www.johnvincent.io/website/markdown-spell-checking/
