--- a/pages/notes/magpie/2023-02-09.index.en.mdx
+++ b/pages/notes/magpie/2023-02-09.index.en.mdx
@@ -50,3 +50,9 @@ https://docs.aws.amazon.com/iot/latest/developerguide/secure-tunneling-tutorial-
 
 https://sleeplessbeastie.eu/2022/05/23/how-to-configure-static-ip-address-on-raspberry-pi/<br />
 https://www.johnvincent.io/website/markdown-spell-checking/
+
+
+### Books to Read
+
+https://ru.wikipedia.org/wiki/Полдень,_XXII_век<br />
+https://ru.wikipedia.org/wiki/Жук_в_муравейнике
