--- a/pages/notes/magpie/2023-02-09.index.en.mdx
+++ b/pages/notes/magpie/2023-02-09.index.en.mdx
@@ -27,6 +27,10 @@ https://stackoverflow.com/a/64424326/5000057
 
 https://shikijs.github.io/twoslash/
 
+### Org-mode
+
+https://github.com/Kungsgeten/org-brain
+
 ### CSS
 
 #### Styling methods
@@ -49,8 +53,8 @@ https://docs.aws.amazon.com/iot/latest/developerguide/secure-tunneling-tutorial-
 ### Other Blog Examples
 
 https://sleeplessbeastie.eu/2022/05/23/how-to-configure-static-ip-address-on-raspberry-pi/<br />
-https://www.johnvincent.io/website/markdown-spell-checking/
-
+https://www.johnvincent.io/website/markdown-spell-checking/<br />
+https://blog.petit.dev/
 
 ### Books to Read
 
