--- a/pages/blog/multi-language-spelling-in-emacs/2023-03-01.index.en.mdx
+++ b/pages/blog/multi-language-spelling-in-emacs/2023-03-01.index.en.mdx
@@ -10,4 +10,38 @@ categories:
   - fun
 ---
 
-Despite finishing Russian school and getting my first undergraduate degree in Russian, my publishing practice mostly consists of English-language publications. In my early days in academia my preferred editor was Microsoft Word.
+Despite finishing Russian school and getting my undergraduate degree in Russian,
+my (fairly small) publishing practice mostly consists of English-language
+papers. In my early days in academia my preferred editor was Microsoft Word.
+With practice and discipline in Word one could achieve content-presentation
+separation, consistent automatic styling and a certain degree of automation,
+such as image or equation numbering or generating table of content. With some
+additional software and plugins, the level of automation could be even
+higher&nbsp;- such as automatic references list or image placement.
+
+Despite obvious advantages of Word (and other WYSIWYG editors), there are
+reasons against using it. First, Word file format is complicated, not human
+readable and evolving over time. It is nearly impossible to open a complex Word
+document in some other editor and have its accurate visual representation. Even
+the newer versions of Word occasionally fail to open a document created in its
+previous version. Second, many scientific journals used to provide a better
+quality LaTeX templates than Word. And third, I find LaTeX-rendered documents
+more visually appealing than Word documents.
+
+Those reasons were sufficient for me to switch to LaTeX despite its steep
+learning curve and tall entry barrier. After learning the basics I realised that
+my usual then programming text editors are not convenient to edit prose text.
+After trying many specialised LaTeX text editors I eventually converged to Emacs
+mode called AUCTeX. That is how my Emacs adventure began that led me to
+abandoning Visual Studio, then Windows and eventually moving to Linux.
+
+Some people are said to have innate literacy&nbsp;- it must be far right side of
+some literacy distribution carve. My literacy should be somewhere at another
+side of that carve&nbsp;- "innate illiteracy". Thus, after I had Emacs, AUCTeX
+and MiKTeX running, I had to find a good way to spell-check my writings.
+Something similar to Word's red squiggly line. Initially I configured Emacs
+ispell package with aspell driver. However ispell was useful, it felt too manual
+and retrograde in compare to Word's squiggly lines that I used to.
+
+However I do not remember details from that now distant past, for some reason I
+could not get flyspell working and ended-up using speck with aspell instead.
