--- a/pages/blog/multi-language-spelling-in-emacs/2023-03-01.index.en.mdx
+++ b/pages/blog/multi-language-spelling-in-emacs/2023-03-01.index.en.mdx
@@ -12,12 +12,13 @@ categories:
 
 Despite finishing Russian school and getting my undergraduate degree in Russian,
 my (fairly small) publishing practice mostly consists of English-language
-papers. In my early days in academia my preferred editor was Microsoft Word.
-With practice and discipline in Word one could achieve content-presentation
-separation, consistent automatic styling and a certain degree of automation,
-such as image or equation numbering or generating table of content. With some
-additional software and plugins, the level of automation could be even
-higher&nbsp;- such as automatic references list or image placement.
+papers. In my early days in academia my preferred text editor was Microsoft
+Word. With some practice and discipline in Word one could achieve
+content-presentation separation, consistent automatic styling and a certain
+degree of automation, such as images and equations numbering or generating a
+table of content. With some additional software and plugins, the level of
+automation could be even higher&nbsp;- such as automatic references list or
+image placement.
 
 Despite obvious advantages of Word (and other WYSIWYG editors), there are
 reasons against using it. First, Word file format is complicated, not human
@@ -40,8 +41,9 @@ some literacy distribution carve. My literacy should be somewhere at another
 side of that carve&nbsp;- "innate illiteracy". Thus, after I had Emacs, AUCTeX
 and MiKTeX running, I had to find a good way to spell-check my writings.
 Something similar to Word's red squiggly line. Initially I configured Emacs
-ispell package with aspell driver. However ispell was useful, it felt too manual
-and retrograde in compare to Word's squiggly lines that I used to.
+ispell package with aspell driver. Although ispell was useful, it felt too
+manual and retrograde in compare to Word's squiggly lines that I used to.
 
 However I do not remember details from that now distant past, for some reason I
-could not get flyspell working and ended-up using speck with aspell instead.
+could not get flyspell working and ended-up installing and configuring speck
+with aspell instead.
