--- a/pages/blog/multi-language-spelling-in-emacs/2023-03-01.index.en.mdx
+++ b/pages/blog/multi-language-spelling-in-emacs/2023-03-01.index.en.mdx
@@ -31,19 +31,36 @@ more visually appealing than Word documents.
 
 Those reasons were sufficient for me to switch to LaTeX despite its steep
 learning curve and tall entry barrier. After learning the basics I realised that
-my usual then programming text editors are not convenient to edit prose text.
+my usual then programming text editors were not convenient to edit prose text.
 After trying many specialised LaTeX text editors I eventually converged to Emacs
 mode called AUCTeX. That is how my Emacs adventure began that led me to
 abandoning Visual Studio, then Windows and eventually moving to Linux.
 
 Some people are said to have innate literacy&nbsp;- it must be far right side of
-some literacy distribution carve. My literacy should be somewhere at another
-side of that carve&nbsp;- "innate illiteracy". Thus, after I had Emacs, AUCTeX
+some literacy distribution curve. My literacy should be somewhere at another
+side of that curve&nbsp;- "innate illiteracy". Thus, after I had Emacs, AUCTeX
 and MiKTeX running, I had to find a good way to spell-check my writings.
-Something similar to Word's red squiggly line. Initially I configured Emacs
+Something similar to Word's red squiggly line. Initially, I configured Emacs
 ispell package with aspell driver. Although ispell was useful, it felt too
 manual and retrograde in compare to Word's squiggly lines that I used to.
 
 However I do not remember details from that now distant past, for some reason I
 could not get flyspell working and ended-up installing and configuring speck
-with aspell instead.
+with aspell instead. At that time I also tried and failed to configure
+multi-language spellchecking. A separate Russian dictionary worked well with
+aspell and not with speck. Possibly, I could not configure it correctly because
+of my insufficient experience with ELisp and lack of interest in getting it
+working.
+
+By the time I started working on this site Emacs has became my editor of choice
+of all my text editing needs. Even more recent better text editor such as
+Sublime and Visual Studio Code do not fit my mindset as well as Emacs. Also, my
+ELisp confidence grew together with the size of my emcacs/init.el config file.
+
+From the beginning I wanted my site to have full i18n support and both English
+and Russian languages used as a default. Unfortunately, over these years of
+practicing Emacs my innate literacy did not become any better and I sill require
+a good spellchecker to tell me how I should not write. Initial internet search
+revealed a reddit post [Spell checkers in Emacs
+in 2020](https://www.reddit.com/r/emacs/comments/fxs92h/spell_checkers_in_emacs_in_2020/)
+that was a good starting point.
