--- a/pages/blog/multi-language-spelling-in-emacs/2023-03-01.index.en.mdx
+++ b/pages/blog/multi-language-spelling-in-emacs/2023-03-01.index.en.mdx
@@ -22,16 +22,16 @@ content. With certain additional software and plugins, the level of automation
 could be increased further&nbsp;- such as automatic list of references or image
 placement.
 
-Despite obvious advantages of Word (and other WYSIWYG editors), there are
-reasons against using it. First, Word file format is complicated, not human
-readable and evolving over time. It is nearly impossible to open a complex Word
-document in any other editor and have its accurate visual representation. Even
-the newer versions of Word occasionally fail to open a document created in its
-previous version. Second, many scientific journal publishers used to provide a
-better quality LaTeX templates than Word. And third, I find LaTeX-rendered
+Although there are obvious advantages of Word (and other WYSIWYG editors), there
+are strong reasons against using it. First, Word file format is complicated, not
+human readable and evolving over time. It is nearly impossible to open a complex
+Word document in any other editor and have its accurate visual representation.
+Even the newer versions of Word occasionally fail to open a document created in
+its previous version. Second, many scientific journal publishers used to provide
+a better quality LaTeX templates than Word. And third, I find LaTeX-rendered
 documents more visually appealing than Word documents.
 
-Those reasons were sufficient for me to switch to LaTeX despite its steep
+Those reasons were sufficient for me to switch to LaTeX, accepting its steep
 learning curve and tall entry barrier. After learning the basics I realised that
 my usual then programming text editors were not well suited to edit prose text.
 After trying many specialised LaTeX text editors I eventually converged to Emacs
@@ -42,7 +42,7 @@ abandoning Visual Studio, then Windows and eventually moving to Linux.
 
 Some people are said to have innate literacy&nbsp;- it must be the far right
 side of some literacy distribution curve. My literacy should be somewhere at
-another side of that curve&nbsp;- "innate illiteracy". Thus, after I had Emacs,
+another side of that curve&nbsp;- "innate ilhliteracy". Thus, after I had Emacs,
 AUCTeX and MiKTeX running, I had to find a good way to spell-check my writings.
 Something similar to famous "Word's red squiggly line". Initially, I configured
 Emacs ispell package with aspell driver. Although ispell was useful for
@@ -54,14 +54,14 @@ could not get flyspell working and ended-up installing and configuring speck
 with aspell instead. At that time I also tried and failed to configure
 multi-language spellchecking. A separate Russian dictionary worked well with
 aspell and not with speck. Possibly, I could not configure it correctly because
-of my insufficient experience with ELisp and lack of interest in getting it
+of my insufficient experience with ELisp and the lack of interest in getting it
 working.
 
 Many years after those events, by the time I started working on this website,
-Emacs has became my editor of choice of all my text editing needs. Even more
-recent text editors such as Sublime and Visual Studio Code do not fit my mindset
-as well as Emacs. Also, my ELisp confidence grew together with the size of my
-`.config/emcacs/init.el` config file solidifying my faith in Emacs.
+Emacs has became the editor of choice for all my text editing needs. Even more
+recent advanced text editors such as Sublime and Visual Studio Code do not fit
+my mindset as well as Emacs. Also, my ELisp confidence grew together with the
+size of my `.config/emcacs/init.el` config file solidifying my faith in Emacs.
 
 From the beginning I wanted my site to have full i18n support, allowing English
 and Russian publications in the beginning and more languages in the future.
