--- a/pages/blog/multi-language-spelling-in-emacs/2023-03-01.index.en.mdx
+++ b/pages/blog/multi-language-spelling-in-emacs/2023-03-01.index.en.mdx
@@ -13,11 +13,11 @@ categories:
 ## Priming
 
 Despite finishing Russian school and getting my undergraduate degree in Russian,
-my (fairly small) publishing practice mostly consists of English-language
+my (fairly small) publishing experience consists mostly of English-language
 writings. In my early days in academia my preferred text editor was Microsoft
 Word. With some practice and discipline in Word one could achieve
-content-presentation separation, consistent automatic styling and a some degree
-of automation, such as images and equations numbering or generating a table of
+content-presentation separation, consistent automatic styling and some degree of
+automation, such as images and equations numbering or generating a table of
 content. With certain additional software and plugins, the level of automation
 could be increased further&nbsp;- such as automatic list of references or image
 placement.
@@ -42,11 +42,11 @@ abandoning Visual Studio, then Windows and eventually moving to Linux.
 
 Some people are said to have innate literacy&nbsp;- it must be the far right
 side of some literacy distribution curve. My literacy should be somewhere at
-another side of that curve&nbsp;- "innate ilhliteracy". Thus, after I had Emacs,
+another side of that curve&nbsp;- "innate illiteracy". Thus, after I had Emacs,
 AUCTeX and MiKTeX running, I had to find a good way to spell-check my writings.
-Something similar to famous "Word's red squiggly line". Initially, I configured
-Emacs ispell package with aspell driver. Although ispell was useful for
-individual words checking, it felt too manual and retrograde in compare to
+Something similar to the famous "Word's red squiggly line". Initially, I
+configured Emacs ispell package with aspell driver. Although ispell was useful
+for individual words checking, it felt too manual and retrograde in compare to
 Word's squiggly lines that I used to.
 
 However I do not remember details from that now distant past, for some reason I
