--- a/pages/blog/typography-torture-test/2023-01-30.index.en.mdx
+++ b/pages/blog/typography-torture-test/2023-01-30.index.en.mdx
@@ -2,6 +2,7 @@
 title: Typography Torture Test
 authors:
   - Victor Rybynok
+draft: true
 datePublished: '2023-01-30'
 description: Demo of the site articles typography capabilities
 categories:
