--- a/pages/blog/how-i-ended-up-here/2023-01-11.index.en.mdx
+++ b/pages/blog/how-i-ended-up-here/2023-01-11.index.en.mdx
@@ -216,7 +216,7 @@ activated from an icon button with the three choices.
 
 Long time ago I tried to implement a dropdown menu from scratch (long before
 Typescript and React). I still remember how difficult is to implement a proper
-pop-up or even a button that work consistently from mouse, keyboard and
+pop-up or even a button that works consistently from mouse, keyboard and
 touchscreen interfaces. My hope was that with modern web standards it should be
 much easier than it was in the past. I was wrong. My instincts took me to
 Zendesk Garden dropdown menu source code to copy'n'paste and simplify it in my
