--- a/pages/index/2023-02-13.index.ru.mdx
+++ b/pages/index/2023-02-13.index.ru.mdx
@@ -11,9 +11,9 @@ description: Моя домашняя страница
 реального времени с автоматическим управлением и пользовательскими интерфейсами
 на основе веб.
 
-Этот сайт представляет собой коллекцию моих блог-публикаций и заметок, а также
-место где я могу удерживать свои мысли в организованной форме, с возможностью
-поиска и открытыми остальному миру&nbsp;– моё пространство в
+Этот сайт представляет собой коллекцию блог-публикаций и заметок, а также место
+где я могу удерживать свои мысли в организованной форме, с возможностью поиска и
+открытыми остальному миру&nbsp;– моё пространство в
 [неосфере](https://ru.wikipedia.org/wiki/Ноосфера).
 
 Также, это тестовая платформа для экспериментов с методами разработки и
