--- a/pages/blog/how-i-ended-up-here/2023-01-11.index.en.mdx
+++ b/pages/blog/how-i-ended-up-here/2023-01-11.index.en.mdx
@@ -21,7 +21,7 @@ categories:
   />
   <figcaption></figcaption>
   <figcaption>
-    <>Front-end Doom</>
+    <>Front-end Doom&nbsp;</>
     <>[[origin](https://twitter.com/aravindameewal1/status/1362587906661961730)]</>
   </figcaption>
 </figure>
@@ -130,7 +130,7 @@ packages maintenance chores and infinitely deep `node_modules`.
     priority
   />
   <figcaption>
-    <>Heaviest Objects In The Universe: node_modules</>
+    <>Heaviest Objects In The Universe: node_modules&nbsp;</>
     <>[[origin](https://javascript.plainenglish.io/node-js-esm-npm-yarn-deep-dive-adda15dabce)]</>
   </figcaption>
 </figure>
@@ -614,7 +614,7 @@ Next.js supports SCSS out-of-the-box with no further configuration.
     priority
   />
   <figcaption>
-    <>CSS Anarchy</>
+    <>CSS Anarchy&nbsp;</>
     <>[[origin](https://uxplanet.org/how-it-feels-like-to-style-things-in-2020-54177a93f30d)]</>
   </figcaption>
 </figure>
