--- a/pages/notes/magpie/2023-02-09.index.en.mdx
+++ b/pages/notes/magpie/2023-02-09.index.en.mdx
@@ -25,7 +25,10 @@ https://stackoverflow.com/a/64424326/5000057
 
 ### Markdown
 
-https://shikijs.github.io/twoslash/
+[shiki-twoslash](https://shikijs.github.io/twoslash/)<br />
+[remark](https://github.com/remarkjs/remark)<br />
+[awesome-remark](https://github.com/remarkjs/awesome-remark)<br />
+[remark-math](https://github.com/remarkjs/remark-math)
 
 ### Org-mode
 
