--- a/pages/notes/magpie/2023-02-09.index.en.mdx
+++ b/pages/notes/magpie/2023-02-09.index.en.mdx
@@ -5,7 +5,7 @@ description:
   Collection of quick notes, bookmarks and remarks for further refining and
   rethinking.
 ogImage: /static/notes/magpie/magpie-0.75.jpg
-sortingPriority: 10
+pin: 10
 ---
 
 ### Linux
