--- a/pages/notes/this-site/2023-02-06.index.en.mdx
+++ b/pages/notes/this-site/2023-02-06.index.en.mdx
@@ -3,7 +3,7 @@ title: This Website
 dateUpdated: '2023-02-20'
 description:
   Release notes, TODO list and ideas and for further development of this site.
-sortingPriority: 20
+pin: 20
 ---
 
 {/* &#9744; (☐) for [ ] and &#9745; (☑) for [x] */}
