--- a/pages/notes/emacs/2023-02-21.index.en.mdx
+++ b/pages/notes/emacs/2023-02-21.index.en.mdx
@@ -4,7 +4,7 @@ dateUpdated: '2023-02-20'
 description:
   Emacs notes, TODO lists and ideas for further improvement of Emacs experience.
 # draft: true
-sortingPriority: 30
+pin: 30
 ---
 
 ### Spell Checking
