--- a/pages/notes/magpie/2023-02-09.index.en.mdx
+++ b/pages/notes/magpie/2023-02-09.index.en.mdx
@@ -1,6 +1,6 @@
 ---
 title: Magpie
-dateUpdated: '2023-03-03'
+dateUpdated: '2023-03-12'
 description:
   Collection of quick notes, bookmarks and remarks for further refining and
   rethinking.
@@ -30,6 +30,10 @@ https://stackoverflow.com/a/64424326/5000057
 [awesome-remark](https://github.com/remarkjs/awesome-remark)<br />
 [remark-math](https://github.com/remarkjs/remark-math)
 
+### React Components
+
+[hamburger-react](https://github.com/luukdv/hamburger-react)
+
 ### Org-mode
 
 https://github.com/Kungsgeten/org-brain
@@ -55,6 +59,8 @@ https://docs.aws.amazon.com/iot/latest/developerguide/secure-tunneling-tutorial-
 
 ### Other Blog Examples
 
+https://www.luuk.site/<br />
+https://www.stutpak.com/<br />
 https://laymonage.com/<br />
 https://nickballou.com/<br />
 https://sleeplessbeastie.eu/2022/05/23/how-to-configure-static-ip-address-on-raspberry-pi/<br />
