--- a/pages/index/2023-02-01.index.en.mdx
+++ b/pages/index/2023-02-01.index.en.mdx
@@ -6,7 +6,7 @@ description: My home page
 
 # Greetings, stranger!
 
-My name is Victor Rybynok. I am R&D Software Engineer&nbsp;– mostly, developing
+My name is Victor Rybynok. I am R&D Software Engineer&nbsp;– mostly developing
 embedded software for distributed real time systems with automatic control and
 web user interfaces.
 
