--- a/pages/notes/magpie/2023-02-09.index.en.mdx
+++ b/pages/notes/magpie/2023-02-09.index.en.mdx
@@ -4,7 +4,7 @@ dateUpdated: '2023-03-12'
 description:
   Collection of quick notes, bookmarks and remarks for further refining and
   rethinking.
-ogImage: /static/notes/magpie/magpie-0.75.jpg
+# ogImage: /static/notes/magpie/magpie-0.75.jpg
 pin: 10
 ---
 
@@ -59,6 +59,7 @@ https://docs.aws.amazon.com/iot/latest/developerguide/secure-tunneling-tutorial-
 
 ### Other Blog Examples
 
+https://rhnmht30.dev/blog/i-over-engineered-my-blog#choose-your-tech-the-wise-way<br />
 https://www.luuk.site/<br />
 https://www.stutpak.com/<br />
 https://laymonage.com/<br />
