--- a/pages/blog/how-i-ended-up-here/2023-01-11.index.en.mdx
+++ b/pages/blog/how-i-ended-up-here/2023-01-11.index.en.mdx
@@ -179,8 +179,9 @@ I like aesthetics of Zendesk Garden design system, its clearly defined design
 principles and the language as well as its extensive and evolving components
 library. It is built around [styled components](https://styled-components.com/)
 (SC) for styling (view layer or presentation logic). Additionally, it has
-[Tailwind CSS]() design tokens that seamlessly blend tailwind utility classes
-into Zendesk Garden <abbr title="Styled Components">SC</abbr> design.
+[Tailwind CSS](https://tailwindcss.com/) design tokens that seamlessly blend
+tailwind utility classes into Zendesk Garden <abbr title="Styled
+Components">SC</abbr> design.
 
 On the other hand side Zendesk Garden library is large (i.e. when compiled from
 source code&nbsp;– individual components on NPM are more manageable) and has
