--- a/pages/notes/this-site/2023-02-06.index.en.mdx
+++ b/pages/notes/this-site/2023-02-06.index.en.mdx
@@ -12,6 +12,8 @@ pin: 20
 
 #### &#9744; Links mouse-in and mouse-out animation
 
+#### &#9744; Ensure that dates in Blog and Notes do not wrap on small screens
+
 <p />
 
 ### More involved changes and improvements
@@ -27,7 +29,7 @@ pluggin (rehypeImgSize -> rehypeImg?) should update it to
 
 ### Longer and complex investigations
 
-#### &#9744; Add comments and reactions to blog posts
+#### &#9745; Add comments and reactions to blog posts
 
 https://giscus.app/
 
