--- a/pages/notes/3d-printer-avr-firmware-backup/2023-03-08.index.en.mdx
+++ b/pages/notes/3d-printer-avr-firmware-backup/2023-03-08.index.en.mdx
@@ -1,7 +1,7 @@
 ---
 title: 3D Printer AVR Firmware Backup
 dateUpdated: '2023-03-08'
-description: 'avrdude firmware upload and download hint'
+description: avrdude firmware upload and download hint
 ---
 
 ### Upload
