--- a/pages/notes/funmat-ht-intamsys-50/2023-04-17.index.en.mdx
+++ b/pages/notes/funmat-ht-intamsys-50/2023-04-17.index.en.mdx
@@ -32,3 +32,38 @@ Pin  | Function
 085  | X Driver Step
 086  | Y Driver Step
 097  | X Zero
+
+### Intamsys 5.0 connectors
+
+Connector | Function
+----------|---------
+J5        | X Zero
+J8        | Y Zero
+J6        | Z Top
+J9        | Z Bottom
+
+### Funmat HT stepper motor wiring
+
+Colour    | Function
+----------|----------
+Green     | Pull
+Red       | Direction
+Yellow    | Enable
+Blue      | GND
+
+### BLTouch Leveling Sensor wiring
+
+#### 3 Pins
+
+Colour    | Function
+----------|----------
+Green     | GND
+Red       | +5V
+Orange    | Signal
+
+#### 2 Pins
+
+Colour    | Function
+----------|----------
+Black     | GND
+White     | Z Min
