--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -4,31 +4,24 @@ dateUpdated: '2023-02-20'
 description: About me
 ---
 
-{/*
-# About
-# About This Site
-*/}
+I prefer to avoid disclosing certain type of information about my self, my
+family or friends on the public internet resources. As such, on this page I
+would not include my current employer or location beyond the country of
+residence. If for some reason you require that information, please contact me
+directly via email - v.rybynok@gmail.com
 
-{/* # Welcome to my website! */}
-# Greetings, stranger!
+One of my first childhood memories, perhaps from an age of 3 or 4, is helping my
+father building a light music box back in the days of Soviet Union where it was
+hard to get such devices from the electronics shops. My father explained to me
+what are transistors, cascading amplifiers and frequency filters, and how to use
+lacquers to colour incandescent light bulbs - all are still relevant today.
+Except, colouring incandescent bulbs - one, would, likely use LED lights for
+that purpose these days.
 
-My name is Victor Rybynok. I am R&D Software Engineer&nbsp;– mostly, developing
-embedded software for distributed real time systems with automatic control and
-web user interfaces.
-
-{/*
-My name is Victor Rybynok. I am R&D Software Engineer&nbsp;– mostly, developing
-software for distributed real time embedded systems in scientific
-instruments with automatic control and web-based user interfaces.
-
-At different stages of my carrier I worked as Computer Systems Engineer,
-Electronics Engineer, Medical Physicists and Bio-Medical Engineering Researcher.
-*/}
-
-This website site is a collection of blog posts and notes, and the place where I
-can keep my thoughts organised, searchable and shared with the rest of the
-world&nbsp;– my space in [noosphere](https://en.wikipedia.org/wiki/Noosphere).
-
-It is also a test platform where I can experiment with web software development
-and deployment techniques and document small discoveries that I find
-interesting.
+My grandfather was a director of a factory that produced TV sets back in 80th.
+He always had some cool gadgets in his house, such as
+[first personal computers](https://en.wikipedia.org/wiki/Pravetz_computers) and
+[TV game consoles](https://ru.wikibooks.org/wiki/Советские_телевизионные_игровые_приставки/Фабричные_телеигры).
+I visited my grandparents nearly every school holiday. That is when I became
+fascinated with computers - the electronic machines that later became my
+passion, profession and the lifestyle.
